--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "brain.js": "^1.6.1",
     "express": "^4.16.4"
   },
   "devDependencies": {
