--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "brain.js": "^1.6.1",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "swagger-ui-express": "^4.0.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
